--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 12:24:00 PM</p>
+    <p class="lastupdate">09/17/2020 12:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.8&#176;F</td>
+        <td class="data">83.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.8&#176;F</td>
+        <td class="data">83.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.8&#176;F</td>
+        <td class="data">83.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.6&#176;F</td>
+        <td class="data">54.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.930 inHg (-0.024)</td>
+        <td class="data">29.931 inHg (-0.024)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SE (135&#176;)</td>
+        <td class="data">2 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.6&#176;F</td>
+        <td class="data">75.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:31 PM">
-            82.9</span><br/>
+          <span title="12:28:07 PM">
+            83.5</span><br/>
           <span title="06:56:13 AM">
             50.8</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:31 PM" class="hival">
-            82.9</span>
+          <span title="12:28:07 PM" class="hival">
+            83.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:20:27 PM">
-            54.8</span><br/>
+          <span title="12:26:15 PM">
+            54.9</span><br/>
           <span title="05:31:48 AM">
             41.4</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:06 AM">
             80</span><br/>
-          <span title="12:20:35 PM">
-            38</span>
+          <span title="12:26:33 PM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:07:00 AM">
-            75.6</span><br/>
+          <span title="12:27:01 PM">
+            75.7</span><br/>
           <span title="05:43:00 AM">
             70.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 21 hours, 37 minutes</td>
+      <td class="data">15 days, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 21 hours, 37 minutes</td>
+      <td class="data">15 days, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
