--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 01:09:00 PM</p>
+    <p class="lastupdate">09/17/2020 01:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.4&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.4&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.4&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.7&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">32%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.053)</td>
+        <td class="data">29.912 inHg (-0.054)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.1&#176;F</td>
+        <td class="data">76.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:08:17 PM">
-            86.4</span><br/>
+          <span title="01:13:35 PM">
+            87.4</span><br/>
           <span title="06:56:13 AM">
             50.8</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:08:17 PM" class="hival">
-            86.4</span>
+          <span title="01:13:35 PM" class="hival">
+            87.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:06 AM">
             80</span><br/>
-          <span title="12:48:45 PM">
-            34</span>
+          <span title="01:13:31 PM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          47
+          48
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          195
+          194
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:58:01 PM">
-            76.1</span><br/>
+          <span title="01:10:01 PM">
+            76.2</span><br/>
           <span title="05:43:00 AM">
             70.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 22 hours, 22 minutes</td>
+      <td class="data">15 days, 22 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 22 hours, 22 minutes</td>
+      <td class="data">15 days, 22 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
