--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 01:34:00 PM</p>
+    <p class="lastupdate">09/17/2020 01:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.0&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.0&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.0&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.5&#176;F</td>
+        <td class="data">52.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.900 inHg (-0.068)</td>
+        <td class="data">29.896 inHg (-0.071)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">2 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:06 AM">
             80</span><br/>
-          <span title="01:28:03 PM">
-            29</span>
+          <span title="01:35:45 PM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:37:01 AM">
             29.970</span><br/>
-          <span title="01:32:01 PM">
-            29.900</span>
+          <span title="01:36:01 PM">
+            29.895</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          48
+          50
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:24:01 PM">
-            76.6</span><br/>
+          <span title="01:34:01 PM">
+            76.7</span><br/>
           <span title="05:43:00 AM">
             70.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 22 hours, 47 minutes</td>
+      <td class="data">15 days, 22 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 22 hours, 47 minutes</td>
+      <td class="data">15 days, 22 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
